Clean up warnings and dead code in spring-core module